@@ -288,12 +288,12 @@ if env['PLATFORM'] != 'win32':
 # Distribution tarfile
 #
 
-# create .tar.gz, prepend filenames with durodbms-<version>
+# create .tar.gz, prepend paths with durodbms-<version>
 env.Replace(TARFLAGS = '-c -z --exclude .sconsign --transform \'s,^,durodbms-'
         + release + '/,S\'')
 
 if env.has_key('TAR'):
-    disttar = 'durodbms-' + release + '.tar.gz'
+    disttar = 'durodbms-' + release + '-src.tar.gz'
 
     env.Tar(disttar, Split('SConstruct README README.windows INSTALL '
             'COPYING AUTHORS CHANGES Doxyfile'))
